--- a/src/components/sass/variables.scss
+++ b/src/components/sass/variables.scss
@@ -2,4 +2,5 @@ $color-light-grey: rgba(194, 154, 120, 1);
 $color-dark-grey: rgba(95, 102, 98, 1);
 $color-white: white;
 $color-black: black;
-$color-arrow-grey: rgba(141, 142, 144, 1);
+$color-arrow-grey: rgba(140, 142, 144, 1);
+$color-button-grey: rgba(174, 176, 177, 1);
