--- a/src/components/sass/animation.css
+++ b/src/components/sass/animation.css
@@ -18,6 +18,11 @@
   animation-duration: 1s;
   animation-timing-function: ease-in; }
 
+.section-right-animation {
+  animation-name: moveInRight;
+  animation-duration: 1s;
+  animation-timing-function: ease-in; }
+
 .home-section-animation {
   -webkit-animation-name: rotateIn;
   animation-name: rotateIn;
