--- a/src/components/App.css
+++ b/src/components/App.css
@@ -49,7 +49,8 @@ body {
   position: relative; }
 
 .section {
-  font-size: 20px; }
+  font-size: 20px;
+  z-index: 10; }
   .section--header {
     grid-column: 1 / -1;
     grid-row: 1 / 2; }
