--- a/src/components/sass/animation.scss
+++ b/src/components/sass/animation.scss
@@ -47,6 +47,7 @@
     animation-name: moveBackButtonOut;
     animation-duration: 1s;
     animation-timing-function: ease-in;
+    opacity: 0;
 }
 
 @keyframes moveBackButtonIn {
