changed text align from left to center

--- a/src/components/apartments/ApartmentDetail.css
+++ b/src/components/apartments/ApartmentDetail.css
@@ -48,11 +48,12 @@
       .aptdetail--description--container--desc {
         grid-column: 2 / 3;
         grid-row: 1 / 2;
-        background-color: #8c8e90; }
+        background-color: #8c8e90;
+        text-align: center; }
       .aptdetail--description--container--contact {
         grid-column: 2 / 3;
         grid-row: 2 / 3;
-        text-align: left;
+        text-align: center;
         font-size: 28px;
         line-height: 150%;
         background-color: #8c8e90; }
