--- a/src/components/around/DirectoryDisplay.scss
+++ b/src/components/around/DirectoryDisplay.scss
@@ -95,21 +95,33 @@
             &--left {
                 grid-column: 1 / 2;
                 grid-row: 2 / 3;
-                padding: 30px;
+                padding-left: 55px;
+                padding-right: 55px;
                 background-color: $color-dark-grey;
-                font-size: 26px;
+                font-size: 22px;
                 letter-spacing: 1px;
                 text-align: left;
+                line-height: 1.4em;
+                p {
+                    margin-top: 0px;
+                    margin-bottom: 0px;
+                }
             }
 
             &--right {
                 grid-column: 2 / 3;
                 grid-row: 2 / 3;
-                padding: 30px;
+                padding-left: 55px;
+                padding-right: 55px;
                 background-color: $color-dark-grey;
-                font-size: 26px;
+                font-size: 22px;
                 letter-spacing: 1px;
-                text-align: left;
+                text-align: left; 
+                line-height: 1.4em;
+                p {
+                    margin-top: 0px;
+                    margin-bottom: 0px;
+                }
             }
 
             &--bottomWhite {
