--- a/src/components/features/FeatureDetail.css
+++ b/src/components/features/FeatureDetail.css
@@ -49,11 +49,11 @@
         grid-column: 2 / 3;
         grid-row: 1 / 2;
         background-color: #8c8e90;
-        text-align: center; }
+        text-align: left; }
       .featuredetail--description--container--contact {
         grid-column: 2 / 3;
         grid-row: 2 / 3;
-        text-align: center;
+        text-align: left;
         font-size: 28px;
         line-height: 150%;
         background-color: #8c8e90; }
