--- a/src/components/around/DirectoryDisplay.css
+++ b/src/components/around/DirectoryDisplay.css
@@ -82,7 +82,9 @@
       font-size: 22px;
       letter-spacing: 1px;
       text-align: left;
-      line-height: 1.4em; }
+      line-height: 1.4em;
+      overflow-y: scroll;
+      height: 100%; }
       .directorydisplay--detail--item--description--container--left p {
         margin-top: 0px;
         margin-bottom: 0px; }
@@ -95,7 +97,9 @@
       font-size: 22px;
       letter-spacing: 1px;
       text-align: left;
-      line-height: 1.4em; }
+      line-height: 1.4em;
+      overflow-y: scroll;
+      height: 100%; }
       .directorydisplay--detail--item--description--container--right p {
         margin-top: 0px;
         margin-bottom: 0px; }
