--- a/src/components/around/DirectoryDisplay.scss
+++ b/src/components/around/DirectoryDisplay.scss
@@ -102,6 +102,9 @@
                 letter-spacing: 1px;
                 text-align: left;
                 line-height: 1.4em;
+                overflow-y : scroll;
+                height: 100%;
+
                 p {
                     margin-top: 0px;
                     margin-bottom: 0px;
@@ -118,6 +121,9 @@
                 letter-spacing: 1px;
                 text-align: left; 
                 line-height: 1.4em;
+                overflow-y : scroll;
+                height: 100%;
+                
                 p {
                     margin-top: 0px;
                     margin-bottom: 0px;
