--- a/src/components/gallery/Gallery.css
+++ b/src/components/gallery/Gallery.css
@@ -153,6 +153,6 @@
   height: 667px; }
 
 .thumbnail--item {
-  background-color: green;
+  background-color: #5e6662;
   flex-basis: 25%;
   height: 135px; }
