--- a/src/components/gallery/Gallery.scss
+++ b/src/components/gallery/Gallery.scss
@@ -47,7 +47,7 @@
 }
 
 .thumbnail--item {
-    background-color: green;
+    background-color: rgb(94, 102, 98);
     flex-basis: 25%;
     height: 135px;
 }
