--- a/src/components/features/FeatureDetail.css
+++ b/src/components/features/FeatureDetail.css
@@ -49,7 +49,9 @@
         grid-column: 2 / 3;
         grid-row: 1 / 2;
         background-color: #8c8e90;
-        text-align: left; }
+        text-align: left;
+        overflow-y: scroll;
+        height: 100%; }
       .featuredetail--description--container--contact {
         grid-column: 2 / 3;
         grid-row: 2 / 3;
