--- a/src/components/features/FeatureDetail.scss
+++ b/src/components/features/FeatureDetail.scss
@@ -60,6 +60,8 @@
                 grid-row: 1 / 2;
                 background-color: $color-arrow-grey;
                 text-align: left;
+                overflow-y : scroll;
+                height: 100%;
             }
             &--contact {
                 grid-column: 2 / 3;
