--- a/src/components/around/DirectoryDisplay.scss
+++ b/src/components/around/DirectoryDisplay.scss
@@ -102,7 +102,7 @@
                 letter-spacing: 1px;
                 text-align: left;
                 line-height: 1.4em;
-                overflow-y : scroll;
+                overflow-y : auto;
                 height: 100%;
 
                 p {
@@ -121,7 +121,7 @@
                 letter-spacing: 1px;
                 text-align: left; 
                 line-height: 1.4em;
-                overflow-y : scroll;
+                overflow-y : auto;
                 height: 100%;
                 
                 p {
