--- a/src/components/around/Around.css
+++ b/src/components/around/Around.css
@@ -5,7 +5,8 @@
   display: grid;
   grid-template-rows: auto;
   grid-template-columns: repeat(1, 1fr);
-  overflow: auto; }
+  overflow-y: auto;
+  overflow-x: hidden; }
 
 .aroundsection--list {
   grid-column: 1 / -1;
