--- a/src/components/around/Around.scss
+++ b/src/components/around/Around.scss
@@ -6,7 +6,8 @@
     display: grid;
     grid-template-rows: auto;
     grid-template-columns: repeat(1, 1fr);
-    overflow: auto;
+    overflow-y: auto;
+    overflow-x: hidden;
 }
 
 .aroundsection {
